make csv of sequencing data - not normalised

--- a/scRNA_input.ipynb
+++ b/scRNA_input.ipynb
@@ -647,10 +647,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1933, 15814)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#now I want to convert my filtered adata to a csv to work with\n",
+    "\n",
+    "print(adata.X.shape)\n",
+    "\n",
+    "#my data is in cells x genes but i want it in genes x cells so going to have to transpose it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "writing .csv files to example_adata\n"
+     ]
+    }
+   ],
+   "source": [
+    "adata.write_csvs(\"example_adata.csv\", skip_data=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "writing .csv files to example_adata_transpose\n"
+     ]
+    }
+   ],
+   "source": [
+    "#gonna try the transpose now \n",
+    "adata.transpose().write_csvs(\"example_adata_transpose.csv\", skip_data=False)\n",
+    "#transpose looks good "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       0     1     2     3     4     5     6     7     8     9     ...  1923  \\\n",
+      "0       0.0   0.0   0.0   0.0   1.0   0.0   0.0   0.0   0.0   0.0  ...   0.0   \n",
+      "1       1.0   1.0   0.0   1.0   0.0   0.0   0.0   0.0   0.0   0.0  ...   0.0   \n",
+      "2       2.0   1.0   0.0   0.0   2.0   0.0   0.0   0.0   3.0   0.0  ...   0.0   \n",
+      "3       1.0   0.0   0.0   0.0   1.0   0.0   0.0   0.0   0.0   0.0  ...   0.0   \n",
+      "4       0.0   0.0   0.0   0.0   0.0   0.0   1.0   0.0   0.0   0.0  ...   0.0   \n",
+      "...     ...   ...   ...   ...   ...   ...   ...   ...   ...   ...  ...   ...   \n",
+      "15809   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   1.0  ...   0.0   \n",
+      "15810   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  ...   0.0   \n",
+      "15811   0.0   6.0   4.0   1.0   1.0   2.0   4.0   4.0  13.0   0.0  ...   2.0   \n",
+      "15812   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  ...   0.0   \n",
+      "15813   0.0   0.0   0.0   1.0   0.0   0.0   0.0   0.0   0.0   0.0  ...   0.0   \n",
+      "\n",
+      "       1924  1925  1926  1927  1928  1929  1930  1931  1932  \n",
+      "0       0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "1       0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "2       0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "3       0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "4       0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "...     ...   ...   ...   ...   ...   ...   ...   ...   ...  \n",
+      "15809   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "15810   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "15811   2.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "15812   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "15813   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
+      "\n",
+      "[15814 rows x 1933 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#going to write it to a full csv in the form of the uhler filtered_lognuminorm_pc_rp_7633genes_1396cellsnCD4 form\n",
+    "X = \"/Users/esthomas/Andor_Rotation/github_repo/cross-modal-autoencoders/example_adata_transpose/X.csv\"\n",
+    "barcodes = \"/Users/esthomas/Andor_Rotation/github_repo/cross-modal-autoencoders/example_adata_transpose/var.csv\"\n",
+    "genes = \"/Users/esthomas/Andor_Rotation/github_repo/cross-modal-autoencoders/example_adata_transpose/obs.csv\"\n",
+    "data = pd.read_csv(X, header=None)\n",
+    "samples = pd.read_csv(barcodes)\n",
+    "gene = pd.read_csv(genes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15814, 3)\n",
+      "(15814, 1933)\n",
+      "(1933, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gene.shape)\n",
+    "print(data.shape)\n",
+    "print(samples.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0           HMGB1P44\n",
+      "1              RBBP9\n",
+      "2        RP11-6K23.1\n",
+      "3            THUMPD3\n",
+      "4              RAB15\n",
+      "            ...     \n",
+      "15809          CLHC1\n",
+      "15810          PHBP7\n",
+      "15811          HLA-J\n",
+      "15812           TOM1\n",
+      "15813        HSPA8P1\n",
+      "Name: gene_symbol, Length: 15814, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gene.iloc[:, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.columns = samples.iloc[:, 0] \n",
+    "data.index = gene.iloc[:, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(data).to_csv('my_data.csv')"
+   ]
   }
  ],
  "metadata": {
