creating boxplot visualisation

--- a/train_rna_image_gpu.ipynb
+++ b/train_rna_image_gpu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2578,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2636,10 +2636,10 @@
     "\n",
     "        # d1 is rna latent point from shared, looking at nearest neighbours in image as smaller\n",
     "        knn_matrix =np.vstack((d1[point], image_latents_array))\n",
-    "        knn = NearestNeighbors(n_neighbors=2)\n",
+    "        knn = NearestNeighbors(n_neighbors=3)\n",
     "        knn.fit(knn_matrix)\n",
-    "        neigh_coords = knn.kneighbors([knn_matrix[0]], return_distance=False)\n",
-    "        print(neigh_coords)\n",
+    "        distance, neigh_coords = knn.kneighbors([knn_matrix[0]], return_distance=True)\n",
+    "        print(distance, neigh_coords)\n",
     "\n",
     "        neigh_labels = []\n",
     "        for index in neigh_coords[0]:\n",
@@ -2658,38 +2658,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 2]]\n",
-      "8_15_72 9_87_4\n",
-      "[[0 8]]\n",
+      "[[ 0.       16.677214 16.803589]] [[0 1 6]]\n",
+      "8_15_72 0_28_6\n",
+      "8_15_72 8_86_13\n",
+      "[[ 0.       15.928792 16.288465]] [[0 6 1]]\n",
       "5_89_83 8_86_13\n",
-      "[[0 3]]\n",
-      "2_76_86 9_82_29\n",
-      "[[0 8]]\n",
+      "5_89_83 0_28_6\n",
+      "[[ 0.       14.254496 15.720817]] [[0 6 1]]\n",
+      "2_76_86 8_86_13\n",
+      "2_76_86 0_28_6\n",
+      "[[ 0.       16.319422 16.668673]] [[0 6 1]]\n",
       "1_90_15 8_86_13\n",
-      "[[0 3]]\n",
-      "9_82_29 9_82_29\n",
-      "[[0 3]]\n",
-      "6_10_76 9_82_29\n",
-      "[[0 3]]\n",
-      "8_86_13 9_82_29\n",
-      "[[0 6]]\n",
-      "9_87_4 1_90_15\n"
+      "1_90_15 0_28_6\n",
+      "[[ 0.       15.695364 16.603128]] [[0 6 1]]\n",
+      "0_28_6 8_86_13\n",
+      "0_28_6 0_28_6\n",
+      "[[ 0.       15.821999 17.606205]] [[0 1 3]]\n",
+      "6_10_76 0_28_6\n",
+      "6_10_76 2_76_86\n",
+      "[[ 0.       15.757412 16.111904]] [[0 2 1]]\n",
+      "8_86_13 1_90_15\n",
+      "8_86_13 0_28_6\n",
+      "[[ 0.       16.216597 17.252747]] [[0 6 3]]\n",
+      "9_87_4 8_86_13\n",
+      "9_87_4 2_76_86\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'1_90_15'"
+       "'2_76_86'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2700,10 +2708,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create boxplot vsualisation\n",
+    "\n",
+    "from scipy.spatial import distance\n",
+    "import random\n",
+    "\n",
+    "def boxplot_vis(data1, data2, model1, model2):\n",
+    "\n",
+    "    # shared points in image and sequencing\n",
+    "    # model 1 - rna\n",
+    "    model1 = model1.cuda()\n",
+    "    \n",
+    "    d1 = {}\n",
+    "    with torch.no_grad():\n",
+    "        for i, dict in enumerate(data1):\n",
+    "            \n",
+    "            images = dict[\"tensor\"]\n",
+    "            labels1 = dict[\"binary_label\"]\n",
+    "            \n",
+    "            embedding = model1.get_latent_var(images.cuda())\n",
+    "\n",
+    "            for i, name in zip(range(len(labels1)), labels1):\n",
+    "                    d1[name] = embedding[i].to(\"cpu\").numpy()\n",
+    "    \n",
+    "    \n",
+    "    # model 2 - images\n",
+    "    d2 = {}\n",
+    "    with torch.no_grad():\n",
+    "        for i, dict in enumerate(data2):\n",
+    "            \n",
+    "            images = dict[\"image_tensor\"]\n",
+    "            labels1 = dict[\"label\"]\n",
+    "            \n",
+    "            embedding = model2.get_latent_var(images.cuda())\n",
+    "\n",
+    "            for i, name in zip(range(len(labels1)), labels1):\n",
+    "                    d2[name] = embedding[i].to(\"cpu\").numpy()\n",
+    "    \n",
+    "    \n",
+    "    d1_keys = set(d1.keys())\n",
+    "    d2_keys = set(d2.keys())\n",
+    "\n",
+    "    shared = d1_keys.intersection(d2_keys)\n",
+    "    \n",
+    "    dist = {}\n",
+    "    # find distance between shared points - calculate mean\n",
+    "    for name in shared:\n",
+    "        dist[name] = distance.euclidean(d2.get(name), d1.get(name))\n",
+    "    \n",
+    "    return dist\n",
+    "\n",
+    "    # find distance between imaging and random points\n",
+    "    for i in range(100):\n",
+    "\n",
+    "\n",
+    "    # plot boxplot\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'5_89_83': 19.527814865112305,\n",
+       " '2_76_86': 17.21592140197754,\n",
+       " '1_90_15': 17.090749740600586,\n",
+       " '8_24_81': 16.1623592376709,\n",
+       " '9_82_29': 17.5584774017334,\n",
+       " '0_28_6': 19.36894989013672,\n",
+       " '8_86_13': 17.393226623535156,\n",
+       " '9_87_4': 17.564722061157227}"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boxplot_vis(genomics_loader, image_loader, netRNA.cuda(), netImage.cuda())"
+   ]
   }
  ],
  "metadata": {
