--- a/train_rna_image_gpu.ipynb
+++ b/train_rna_image_gpu.ipynb
@@ -2708,7 +2708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2760,34 +2760,253 @@
     "    for name in shared:\n",
     "        dist[name] = distance.euclidean(d2.get(name), d1.get(name))\n",
     "    \n",
-    "    return dist\n",
-    "\n",
+    "    dist_rand = {}\n",
     "    # find distance between imaging and random points\n",
+    "    d1_list = list(d1.items())\n",
+    "    d2_list = list(d2.items())\n",
+    "\n",
     "    for i in range(100):\n",
+    "        d1_rand = list(random.choice(d1_list))\n",
+    "        d2_rand = list(random.choice(d2_list))\n",
     "\n",
+    "        name = d1_rand[0] + \"_\" + d2_rand[0]\n",
     "\n",
-    "    # plot boxplot\n"
+    "        print(name)\n",
+    "        dist_rand[name] = distance.euclidean(d2.get(d2_rand[0]), d1.get(d1_rand[0]))\n",
+    "\n",
+    "    # plot boxplot\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    return dist, dist_rand\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9_50_59_2_76_86\n",
+      "6_57_76_2_76_86\n",
+      "1_29_61_9_82_29\n",
+      "5_31_7_5_89_83\n",
+      "4_49_72_2_76_86\n",
+      "0_46_48_3_73_36\n",
+      "2_46_72_8_86_13\n",
+      "0_21_83_2_76_86\n",
+      "7_46_5_8_86_13\n",
+      "9_62_49_9_87_4\n",
+      "3_51_86_8_15_72\n",
+      "7_1_91_3_73_36\n",
+      "7_81_6_9_82_29\n",
+      "9_47_71_8_86_13\n",
+      "5_29_70_8_15_72\n",
+      "3_60_95_3_73_36\n",
+      "6_89_83_8_15_72\n",
+      "3_42_55_2_76_86\n",
+      "6_62_57_3_73_36\n",
+      "0_80_63_8_15_72\n",
+      "0_0_54_5_89_83\n",
+      "0_47_78_2_76_86\n",
+      "1_2_78_0_28_6\n",
+      "3_46_41_0_28_6\n",
+      "2_67_20_0_28_6\n",
+      "3_5_37_0_28_6\n",
+      "8_26_12_2_76_86\n",
+      "3_70_64_0_28_6\n",
+      "4_2_83_3_73_36\n",
+      "8_32_25_2_76_86\n",
+      "0_64_23_8_86_13\n",
+      "7_90_87_8_86_13\n",
+      "9_78_89_5_89_83\n",
+      "7_93_29_2_76_86\n",
+      "3_20_39_9_87_4\n",
+      "4_93_10_3_73_36\n",
+      "6_60_84_3_73_36\n",
+      "5_53_64_0_28_6\n",
+      "4_43_14_0_28_6\n",
+      "8_79_87_8_15_72\n",
+      "2_8_61_9_82_29\n",
+      "1_1_18_3_73_36\n",
+      "3_32_67_0_28_6\n",
+      "3_32_89_9_87_4\n",
+      "4_19_63_3_73_36\n",
+      "0_31_1_3_73_36\n",
+      "5_47_54_8_86_13\n",
+      "4_73_30_8_15_72\n",
+      "3_55_77_8_86_13\n",
+      "2_74_67_0_28_6\n",
+      "7_4_18_3_73_36\n",
+      "7_42_58_0_28_6\n",
+      "1_10_58_5_89_83\n",
+      "2_18_76_9_82_29\n",
+      "3_87_95_9_87_4\n",
+      "1_18_29_2_76_86\n",
+      "7_26_11_8_86_13\n",
+      "4_67_1_5_89_83\n",
+      "3_35_42_3_73_36\n",
+      "7_88_50_5_89_83\n",
+      "9_84_38_0_28_6\n",
+      "6_90_49_3_73_36\n",
+      "0_76_24_0_28_6\n",
+      "6_69_71_9_87_4\n",
+      "1_43_1_9_87_4\n",
+      "0_22_87_2_76_86\n",
+      "8_39_51_8_86_13\n",
+      "8_2_48_0_28_6\n",
+      "8_95_69_2_76_86\n",
+      "2_34_31_8_86_13\n",
+      "4_19_8_2_76_86\n",
+      "1_59_36_9_87_4\n",
+      "0_31_0_2_76_86\n",
+      "4_91_73_9_82_29\n",
+      "3_89_50_0_28_6\n",
+      "1_95_54_9_87_4\n",
+      "9_84_37_8_86_13\n",
+      "1_10_8_9_82_29\n",
+      "3_71_78_2_76_86\n",
+      "9_39_94_9_82_29\n",
+      "1_77_29_5_89_83\n",
+      "4_91_73_0_28_6\n",
+      "8_47_78_8_15_72\n",
+      "1_74_38_9_82_29\n",
+      "2_58_57_0_28_6\n",
+      "7_78_86_3_73_36\n",
+      "7_93_21_9_82_29\n",
+      "5_19_44_5_89_83\n",
+      "4_73_64_9_87_4\n",
+      "8_15_88_3_73_36\n",
+      "5_8_92_0_28_6\n",
+      "1_1_62_8_86_13\n",
+      "0_0_54_9_87_4\n",
+      "1_56_3_9_82_29\n",
+      "8_77_13_9_82_29\n",
+      "3_74_41_3_73_36\n",
+      "1_39_54_0_28_6\n",
+      "0_87_35_0_28_6\n",
+      "7_94_77_9_82_29\n",
+      "8_42_16_9_87_4\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'5_89_83': 19.527814865112305,\n",
-       " '2_76_86': 17.21592140197754,\n",
-       " '1_90_15': 17.090749740600586,\n",
-       " '8_24_81': 16.1623592376709,\n",
-       " '9_82_29': 17.5584774017334,\n",
-       " '0_28_6': 19.36894989013672,\n",
-       " '8_86_13': 17.393226623535156,\n",
-       " '9_87_4': 17.564722061157227}"
+       "({'3_73_36': 33.37660598754883,\n",
+       "  '8_15_72': 14.50969123840332,\n",
+       "  '5_89_83': 20.776451110839844,\n",
+       "  '2_76_86': 17.117660522460938,\n",
+       "  '9_82_29': 16.78176498413086,\n",
+       "  '0_28_6': 16.699296951293945,\n",
+       "  '8_86_13': 16.98668098449707,\n",
+       "  '9_87_4': 18.824256896972656},\n",
+       " {'9_50_59_2_76_86': 16.80720329284668,\n",
+       "  '6_57_76_2_76_86': 18.214696884155273,\n",
+       "  '1_29_61_9_82_29': 17.315038681030273,\n",
+       "  '5_31_7_5_89_83': 20.37967872619629,\n",
+       "  '4_49_72_2_76_86': 17.033693313598633,\n",
+       "  '0_46_48_3_73_36': 36.19956588745117,\n",
+       "  '2_46_72_8_86_13': 18.218141555786133,\n",
+       "  '0_21_83_2_76_86': 17.011981964111328,\n",
+       "  '7_46_5_8_86_13': 16.041561126708984,\n",
+       "  '9_62_49_9_87_4': 17.664039611816406,\n",
+       "  '3_51_86_8_15_72': 16.804805755615234,\n",
+       "  '7_1_91_3_73_36': 35.183815002441406,\n",
+       "  '7_81_6_9_82_29': 16.895540237426758,\n",
+       "  '9_47_71_8_86_13': 18.257041931152344,\n",
+       "  '5_29_70_8_15_72': 15.935236930847168,\n",
+       "  '3_60_95_3_73_36': 35.320255279541016,\n",
+       "  '6_89_83_8_15_72': 15.69061279296875,\n",
+       "  '3_42_55_2_76_86': 15.823963165283203,\n",
+       "  '6_62_57_3_73_36': 34.86712646484375,\n",
+       "  '0_80_63_8_15_72': 16.633535385131836,\n",
+       "  '0_0_54_5_89_83': 21.278980255126953,\n",
+       "  '0_47_78_2_76_86': 18.264310836791992,\n",
+       "  '1_2_78_0_28_6': 16.52039909362793,\n",
+       "  '3_46_41_0_28_6': 17.26030921936035,\n",
+       "  '2_67_20_0_28_6': 17.208499908447266,\n",
+       "  '3_5_37_0_28_6': 17.22379493713379,\n",
+       "  '8_26_12_2_76_86': 15.797752380371094,\n",
+       "  '3_70_64_0_28_6': 16.391845703125,\n",
+       "  '4_2_83_3_73_36': 35.52079391479492,\n",
+       "  '8_32_25_2_76_86': 16.867990493774414,\n",
+       "  '0_64_23_8_86_13': 16.630456924438477,\n",
+       "  '7_90_87_8_86_13': 17.701711654663086,\n",
+       "  '9_78_89_5_89_83': 20.23838996887207,\n",
+       "  '7_93_29_2_76_86': 17.475627899169922,\n",
+       "  '3_20_39_9_87_4': 19.054136276245117,\n",
+       "  '4_93_10_3_73_36': 34.42103958129883,\n",
+       "  '6_60_84_3_73_36': 35.292442321777344,\n",
+       "  '5_53_64_0_28_6': 16.430253982543945,\n",
+       "  '4_43_14_0_28_6': 16.83402442932129,\n",
+       "  '8_79_87_8_15_72': 16.60894203186035,\n",
+       "  '2_8_61_9_82_29': 15.454804420471191,\n",
+       "  '1_1_18_3_73_36': 34.477622985839844,\n",
+       "  '3_32_67_0_28_6': 16.200225830078125,\n",
+       "  '3_32_89_9_87_4': 18.291683197021484,\n",
+       "  '4_19_63_3_73_36': 36.457969665527344,\n",
+       "  '0_31_1_3_73_36': 35.12443923950195,\n",
+       "  '5_47_54_8_86_13': 17.660911560058594,\n",
+       "  '4_73_30_8_15_72': 16.317556381225586,\n",
+       "  '3_55_77_8_86_13': 16.98366355895996,\n",
+       "  '2_74_67_0_28_6': 16.859243392944336,\n",
+       "  '7_4_18_3_73_36': 35.016944885253906,\n",
+       "  '7_42_58_0_28_6': 15.921269416809082,\n",
+       "  '1_10_58_5_89_83': 21.8453369140625,\n",
+       "  '2_18_76_9_82_29': 18.45318603515625,\n",
+       "  '3_87_95_9_87_4': 19.350797653198242,\n",
+       "  '1_18_29_2_76_86': 17.437000274658203,\n",
+       "  '7_26_11_8_86_13': 16.69286346435547,\n",
+       "  '4_67_1_5_89_83': 21.641048431396484,\n",
+       "  '3_35_42_3_73_36': 34.43325424194336,\n",
+       "  '7_88_50_5_89_83': 21.110857009887695,\n",
+       "  '9_84_38_0_28_6': 17.511241912841797,\n",
+       "  '6_90_49_3_73_36': 35.87628936767578,\n",
+       "  '0_76_24_0_28_6': 16.858322143554688,\n",
+       "  '6_69_71_9_87_4': 16.07491683959961,\n",
+       "  '1_43_1_9_87_4': 19.079891204833984,\n",
+       "  '0_22_87_2_76_86': 16.04185676574707,\n",
+       "  '8_39_51_8_86_13': 15.652915954589844,\n",
+       "  '8_2_48_0_28_6': 14.705711364746094,\n",
+       "  '8_95_69_2_76_86': 17.568279266357422,\n",
+       "  '2_34_31_8_86_13': 17.054662704467773,\n",
+       "  '4_19_8_2_76_86': 16.497591018676758,\n",
+       "  '1_59_36_9_87_4': 16.111867904663086,\n",
+       "  '0_31_0_2_76_86': 16.50515365600586,\n",
+       "  '4_91_73_9_82_29': 16.839170455932617,\n",
+       "  '3_89_50_0_28_6': 16.953018188476562,\n",
+       "  '1_95_54_9_87_4': 18.022598266601562,\n",
+       "  '9_84_37_8_86_13': 15.961418151855469,\n",
+       "  '1_10_8_9_82_29': 15.814315795898438,\n",
+       "  '3_71_78_2_76_86': 17.308353424072266,\n",
+       "  '9_39_94_9_82_29': 17.702373504638672,\n",
+       "  '1_77_29_5_89_83': 21.57840919494629,\n",
+       "  '4_91_73_0_28_6': 15.421441078186035,\n",
+       "  '8_47_78_8_15_72': 16.525856018066406,\n",
+       "  '1_74_38_9_82_29': 17.763883590698242,\n",
+       "  '2_58_57_0_28_6': 15.221315383911133,\n",
+       "  '7_78_86_3_73_36': 34.622535705566406,\n",
+       "  '7_93_21_9_82_29': 16.845252990722656,\n",
+       "  '5_19_44_5_89_83': 18.203096389770508,\n",
+       "  '4_73_64_9_87_4': 16.738649368286133,\n",
+       "  '8_15_88_3_73_36': 36.6518440246582,\n",
+       "  '5_8_92_0_28_6': 18.281280517578125,\n",
+       "  '1_1_62_8_86_13': 16.963890075683594,\n",
+       "  '0_0_54_9_87_4': 17.202739715576172,\n",
+       "  '1_56_3_9_82_29': 16.22201156616211,\n",
+       "  '8_77_13_9_82_29': 16.91022491455078,\n",
+       "  '3_74_41_3_73_36': 36.091182708740234,\n",
+       "  '1_39_54_0_28_6': 17.319988250732422,\n",
+       "  '0_87_35_0_28_6': 16.74587631225586,\n",
+       "  '7_94_77_9_82_29': 16.539817810058594,\n",
+       "  '8_42_16_9_87_4': 16.718671798706055})"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
